--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
  <body>
    <div class="mid">
     <ul class="navbar">
-        <li><a href="index.html001.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="che03.html">Science</a></li>
-        <li><a href="index.html">Events</a></li>
+        <li><a href="chemo4.html">Events</a></li>
         <li><a href="che02.html">Get Awerness</a></li>
         <li><a href="che01.html">Get Inspired</a></li>
         <li><a href="https://economictimes.indiatimes.com/topic/climate-change">News</a></li>
